--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import { Image } from "astro:assets";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import logoCircle from "../assets/logo-circle.png";
+
+const imageWidth = 224;
 ---
 
 <BaseLayout title="Eric Rodrigues Pires">
@@ -12,23 +14,24 @@ import logoCircle from "../assets/logo-circle.png";
     <link href="https://bsky.app/profile/eric.dev.br" rel="me" />
   </Fragment>
   <a
-    class="group relative h-[224px] w-[224px] outline-none"
+    class="outline-hidden group relative"
+    style={{width: `${imageWidth}px`, height: `${imageWidth}px`}}
     href="https://github.com/EpicEric"
     rel="me"
     target="_blank"
   >
     <div
-      class="absolute inset-0 rounded-full bg-gray-300 transition group-hover:scale-105 group-hover:bg-gray-600 group-hover:blur-md group-focus:scale-105 group-focus:bg-gray-300 group-focus:blur-md"
+      class="absolute inset-0 rounded-full bg-gray-300 transition group-hover:scale-105 group-hover:bg-gray-600 group-hover:not-group-focus:blur-md group-focus:scale-125 group-focus:bg-gray-300"
       aria-hidden="true"
     >
     </div>
     <Image
-      width={224 * 1.25}
-      height={224 * 1.25}
+      width={imageWidth * 1.25}
+      height={imageWidth * 1.25}
       loading="eager"
       src={logoCircle}
       alt="My logo"
-      class="absolute inset-0 rounded-full transition group-hover:scale-125 group-focus:scale-125 group-focus:ring-8 group-focus:ring-blue-500"
+      class="absolute inset-0 rounded-full transition group-hover:scale-125 group-focus:scale-125 group-focus:ring-8 group-focus:ring-orange-400"
     />
   </a>
   <h1 class="mb-3 mt-4 text-2xl font-semibold">Eric Rodrigues Pires</h1>
