--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,3 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@custom-variant dark {
+  @media not print {
+    .dark & {
+      @slot;
+    }
+  }
+}
