--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const imageWidth = 224;
 <BaseLayout title="Eric Rodrigues Pires">
   <Fragment slot="head-extra">
     <meta property="og:description" content="Programming from Brazil. he/him" />
-    <meta content="/logo.webp" property="og:image" />
+    <meta property="og:image" content="/logo.webp" />
     <link href="https://mastodon.xyz/@epiceric" rel="me" />
     <link href="https://bsky.app/profile/eric.dev.br" rel="me" />
   </Fragment>
