--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/base.css";
+import "@fontsource/dejavu-sans";
 
 type Props = {
   title: string;
@@ -8,7 +9,7 @@ type Props = {
 const { title } = Astro.props;
 ---
 
-<html lang="en">
+<html x-data="{ lang: (localStorage['lang'] ?? navigator.language).startsWith('pt') ? 'pt' : 'en' }" :lang="lang">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -36,7 +37,7 @@ const { title } = Astro.props;
     <slot name="head-extra" />
   </head>
   <body>
-    <main class="flex min-h-screen flex-col items-center justify-center bg-gray-800 text-center text-gray-100">
+    <main class="min-h-screen text-center text-gray-100">
       <slot />
     </main>
   </body>
