--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,10 +6,14 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   <Fragment slot="head-extra">
     <meta property="og:description" content="This page could not be found." />
   </Fragment>
-  <div class="mx-2 flex items-center">
-    <h1 class="mr-4 flex h-16 items-center border-r border-r-gray-100 pr-4 text-2xl font-semibold sm:mr-5 sm:pr-5">
-      404
-    </h1>
-    <p>This page could not be found.</p>
+  <div class="flex min-h-screen flex-col items-center justify-center bg-gray-800 text-center text-gray-100">
+    <div class="mx-2 flex items-center">
+      <h1 class="mr-4 flex h-16 items-center border-r border-r-gray-100 pr-4 text-2xl font-semibold sm:mr-5 sm:pr-5">
+        404
+      </h1>
+      <p x-text="lang == 'pt' ? 'Esta página não foi encontrada.' : 'This page could not be found.'">
+        This page could not be found.
+      </p>
+    </div>
   </div>
 </BaseLayout>
