--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import logoCircle from "../assets/logo-circle.png";
 
 const imageWidth = 224;
+const maxSlide = 1;
 ---
 
 <BaseLayout title="Eric Rodrigues Pires">
@@ -13,30 +14,119 @@ const imageWidth = 224;
     <link href="https://mastodon.xyz/@epiceric" rel="me" />
     <link href="https://bsky.app/profile/eric.dev.br" rel="me" />
   </Fragment>
-  <a
-    class="outline-hidden group relative"
-    style={{width: `${imageWidth}px`, height: `${imageWidth}px`}}
-    href="https://github.com/EpicEric"
-    rel="me"
-    target="_blank"
-  >
+  <div x-data={`{ slide: 0, maxSlide: ${maxSlide} }`} class="relative min-h-screen overflow-x-hidden">
     <div
-      class="absolute inset-0 rounded-full bg-gray-300 transition group-hover:scale-105 group-hover:bg-gray-600 group-hover:not-group-focus:blur-md group-focus:scale-125 group-focus:bg-gray-300"
-      aria-hidden="true"
+      class="absolute inset-0 z-0 flex flex-col items-center justify-center bg-gray-800 transition duration-700"
+      :class="slide < 0 ? 'translate-x-full' : slide > 0 ? '-translate-x-full' : 'translate-x-0'"
+      id="slide-0"
     >
+      <a
+        class="group relative outline-hidden"
+        style={{ width: `${imageWidth}px`, height: `${imageWidth}px` }}
+        href="https://github.com/EpicEric"
+        rel="me"
+        target="_blank"
+        :disabled="slide !== 0"
+      >
+        <div
+          class="absolute inset-0 rounded-full bg-gray-300 transition group-hover:scale-105 group-hover:bg-gray-600 group-hover:not-group-focus:blur-md group-focus:scale-125 group-focus:bg-gray-300"
+          aria-hidden="true"
+        >
+        </div>
+        <Image
+          width={imageWidth * 1.25}
+          height={imageWidth * 1.25}
+          loading="eager"
+          src={logoCircle}
+          alt="Logo"
+          class="absolute inset-0 rounded-full transition group-hover:scale-125 group-focus:scale-125 group-focus:ring-8 group-focus:ring-orange-400"
+        />
+      </a>
+      <h1 class="mt-6 mb-2 text-2xl font-semibold">Eric Rodrigues Pires</h1>
+      <p
+        class="my-4 font-light text-gray-400"
+        x-text="lang == 'pt' ? 'Programando no Brasil' : 'Programming from Brazil'"
+      >
+        Programming from Brazil
+      </p>
+      <footer class="text-sm">
+        © 2022&mdash;{new Date().getFullYear()}
+      </footer>
+      <button
+        type="button"
+        class="mt-7 bg-gray-300 px-6 font-mono text-orange-900 italic ring-0 transition outline-none hover:scale-110 hover:bg-gray-50 focus:bg-gray-50 focus:ring-4 focus:ring-orange-400"
+        @click="() => { if (lang === 'pt') { lang = 'en'; } else { lang = 'pt'; } ; localStorage['lang'] = lang; }"
+      >
+        <svg
+          class="inline size-5"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-languages-icon lucide-languages"
+          ><path d="m5 8 6 6"></path><path d="m4 14 6-6 2-3"></path><path d="M2 5h12"></path><path d="M7 2h1"
+          ></path><path d="m22 22-5-10-5 10"></path><path d="M14 18h6"></path></svg
+        >
+        <span x-text="lang"></span>
+      </button>
     </div>
-    <Image
-      width={imageWidth * 1.25}
-      height={imageWidth * 1.25}
-      loading="eager"
-      src={logoCircle}
-      alt="My logo"
-      class="absolute inset-0 rounded-full transition group-hover:scale-125 group-focus:scale-125 group-focus:ring-8 group-focus:ring-orange-400"
-    />
-  </a>
-  <h1 class="mb-3 mt-4 text-2xl font-semibold">Eric Rodrigues Pires</h1>
-  <p class="my-4 font-light text-gray-400">Website em construção / Website under construction</p>
-  <footer class="text-sm">
-    © 2022&ndash;{new Date().getFullYear()}
-  </footer>
+    <div
+      class="absolute inset-0 -z-1 flex flex-col items-center justify-center bg-gray-950 transition duration-700"
+      :class="slide < 1 ? 'translate-x-full' : slide > 1 ? '-translate-x-full' : 'translate-x-0'"
+      id="slide-1"
+    >
+      <p x-text="lang == 'pt' ? 'Em construção.' : 'Under construction.'">Under construction.</p>
+    </div>
+    <button
+      type="button"
+      @click="slide > 0 && slide--"
+      @keydown.left.window="slide > 0 && slide--"
+      @keydown.h.window="slide > 0 && slide--"
+      class="fixed inset-y-0 left-0 z-10 px-2 text-gray-100/40 transition hover:bg-gray-500/20 hover:text-gray-100 focus:bg-gray-500/20 focus:text-gray-100"
+      :class="slide > 0 ? 'opacity-100' : 'opacity-0'"
+      :disabled="slide === 0"
+    >
+      <svg
+        class="size-8"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="lucide lucide-chevron-left-icon lucide-chevron-left"><path d="m15 18-6-6 6-6"></path></svg
+      >
+    </button>
+    <button
+      type="button"
+      @click="slide < maxSlide && slide++"
+      @keydown.right.window="slide < maxSlide && slide++"
+      @keydown.l.window="slide < maxSlide && slide++"
+      class="fixed inset-y-0 right-0 z-10 px-2 text-gray-100/40 transition hover:bg-gray-500/20 hover:text-gray-100 focus:bg-gray-500/20 focus:text-gray-100"
+      :class="slide < maxSlide ? 'opacity-100' : 'opacity-0'"
+      :disabled="slide === maxSlide"
+    >
+      <svg
+        class="size-8"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"></path></svg
+      >
+    </button>
+  </div>
 </BaseLayout>
