--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,42 @@
 ---
 import { Image } from "astro:assets";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import DuperExample from "../components/duper_example.astro";
 import logoCircle from "../assets/logo-circle.png";
+import LogoDuper from "../assets/duper.svg";
+import logoSandhole from "../assets/sandhole.png";
 
 const imageWidth = 224;
-const maxSlide = 1;
+const maxSlide = 2;
 ---
 
 <BaseLayout title="Eric Rodrigues Pires">
   <Fragment slot="head-extra">
-    <meta property="og:description" content="Programming from Brazil. he/him" />
+    <meta property="og:description" content="Programming from Brazil." />
     <meta property="og:image" content="/logo.webp" />
     <link href="https://mastodon.xyz/@epiceric" rel="me" />
     <link href="https://bsky.app/profile/eric.dev.br" rel="me" />
   </Fragment>
-  <div x-data={`{ slide: 0, maxSlide: ${maxSlide} }`} class="relative min-h-screen overflow-x-hidden">
-    <div
-      class="absolute inset-0 z-0 flex flex-col items-center justify-center bg-gray-800 transition duration-700"
-      :class="slide < 0 ? 'translate-x-full' : slide > 0 ? '-translate-x-full' : 'translate-x-0'"
+  <div
+    x-data={`{
+      slide: 0,
+      maxSlide: ${maxSlide},
+      prev() {
+        this.slide > 0 && this.slide--;
+        document.getElementById('slide-' + this.slide).scrollIntoView({ behavior: 'smooth', inline: 'start' });
+      },
+      next() {
+        this.slide < this.maxSlide && this.slide++;
+        document.getElementById('slide-' + this.slide).scrollIntoView({ behavior: 'smooth', inline: 'start' });
+      }
+    }`}
+    class="flex h-screen overflow-x-scroll"
+  >
+    <section
+      class="flex min-h-screen w-full shrink-0 flex-col items-center justify-center bg-gray-800 px-6"
       id="slide-0"
+      x-intersect.full="slide = 0"
+      aria-label="Home"
     >
       <a
         class="group relative outline-hidden"
@@ -26,7 +44,6 @@ const maxSlide = 1;
         href="https://github.com/EpicEric"
         rel="me"
         target="_blank"
-        :disabled="slide !== 0"
       >
         <div
           class="absolute inset-0 rounded-full bg-gray-300 transition group-hover:scale-105 group-hover:bg-gray-600 group-hover:not-group-focus:blur-md group-focus:scale-125 group-focus:bg-gray-300"
@@ -74,22 +91,151 @@ const maxSlide = 1;
         >
         <span x-text="lang"></span>
       </button>
-    </div>
-    <div
-      class="absolute inset-0 -z-1 flex flex-col items-center justify-center bg-gray-950 transition duration-700"
-      :class="slide < 1 ? 'translate-x-full' : slide > 1 ? '-translate-x-full' : 'translate-x-0'"
+    </section>
+    <section
+      class="flex min-h-screen w-full shrink-0 flex-col items-center justify-center bg-gray-950"
       id="slide-1"
+      x-intersect.full="slide = 1"
+      aria-label="Duper"
     >
-      <p x-text="lang == 'pt' ? 'Em construção.' : 'Under construction.'">Under construction.</p>
-    </div>
+      <div class="-mb-50">
+        <div
+          class="size-56 translate-x-1 translate-y-3 rounded-4xl -bg-linear-45 from-[#3061c4] from-50% to-[#dc9b18] to-50% opacity-70 blur-2xl"
+        >
+        </div>
+        <div><LogoDuper class="size-64 -translate-y-56" /></div>
+      </div>
+      <DuperExample />
+      <div class="mt-4 flex gap-x-3 text-gray-100/80">
+        <svg
+          class="size-8 fill-current transition hover:scale-120"
+          role="img"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          ><title>Rust</title><path
+            d="M23.8346 11.7033l-1.0073-.6236a13.7268 13.7268 0 00-.0283-.2936l.8656-.8069a.3483.3483 0 00-.1154-.578l-1.1066-.414a8.4958 8.4958 0 00-.087-.2856l.6904-.9587a.3462.3462 0 00-.2257-.5446l-1.1663-.1894a9.3574 9.3574 0 00-.1407-.2622l.49-1.0761a.3437.3437 0 00-.0274-.3361.3486.3486 0 00-.3006-.154l-1.1845.0416a6.7444 6.7444 0 00-.1873-.2268l.2723-1.153a.3472.3472 0 00-.417-.4172l-1.1532.2724a14.0183 14.0183 0 00-.2278-.1873l.0415-1.1845a.3442.3442 0 00-.49-.328l-1.076.491c-.0872-.0476-.1742-.0952-.2623-.1407l-.1903-1.1673A.3483.3483 0 0016.256.955l-.9597.6905a8.4867 8.4867 0 00-.2855-.086l-.414-1.1066a.3483.3483 0 00-.5781-.1154l-.8069.8666a9.2936 9.2936 0 00-.2936-.0284L12.2946.1683a.3462.3462 0 00-.5892 0l-.6236 1.0073a13.7383 13.7383 0 00-.2936.0284L9.9803.3374a.3462.3462 0 00-.578.1154l-.4141 1.1065c-.0962.0274-.1903.0567-.2855.086L7.744.955a.3483.3483 0 00-.5447.2258L7.009 2.348a9.3574 9.3574 0 00-.2622.1407l-1.0762-.491a.3462.3462 0 00-.49.328l.0416 1.1845a7.9826 7.9826 0 00-.2278.1873L3.8413 3.425a.3472.3472 0 00-.4171.4171l.2713 1.1531c-.0628.075-.1255.1509-.1863.2268l-1.1845-.0415a.3462.3462 0 00-.328.49l.491 1.0761a9.167 9.167 0 00-.1407.2622l-1.1662.1894a.3483.3483 0 00-.2258.5446l.6904.9587a13.303 13.303 0 00-.087.2855l-1.1065.414a.3483.3483 0 00-.1155.5781l.8656.807a9.2936 9.2936 0 00-.0283.2935l-1.0073.6236a.3442.3442 0 000 .5892l1.0073.6236c.008.0982.0182.1964.0283.2936l-.8656.8079a.3462.3462 0 00.1155.578l1.1065.4141c.0273.0962.0567.1914.087.2855l-.6904.9587a.3452.3452 0 00.2268.5447l1.1662.1893c.0456.088.0922.1751.1408.2622l-.491 1.0762a.3462.3462 0 00.328.49l1.1834-.0415c.0618.0769.1235.1528.1873.2277l-.2713 1.1541a.3462.3462 0 00.4171.4161l1.153-.2713c.075.0638.151.1255.2279.1863l-.0415 1.1845a.3442.3442 0 00.49.327l1.0761-.49c.087.0486.1741.0951.2622.1407l.1903 1.1662a.3483.3483 0 00.5447.2268l.9587-.6904a9.299 9.299 0 00.2855.087l.414 1.1066a.3452.3452 0 00.5781.1154l.8079-.8656c.0972.0111.1954.0203.2936.0294l.6236 1.0073a.3472.3472 0 00.5892 0l.6236-1.0073c.0982-.0091.1964-.0183.2936-.0294l.8069.8656a.3483.3483 0 00.578-.1154l.4141-1.1066a8.4626 8.4626 0 00.2855-.087l.9587.6904a.3452.3452 0 00.5447-.2268l.1903-1.1662c.088-.0456.1751-.0931.2622-.1407l1.0762.49a.3472.3472 0 00.49-.327l-.0415-1.1845a6.7267 6.7267 0 00.2267-.1863l1.1531.2713a.3472.3472 0 00.4171-.416l-.2713-1.1542c.0628-.0749.1255-.1508.1863-.2278l1.1845.0415a.3442.3442 0 00.328-.49l-.49-1.076c.0475-.0872.0951-.1742.1407-.2623l1.1662-.1893a.3483.3483 0 00.2258-.5447l-.6904-.9587.087-.2855 1.1066-.414a.3462.3462 0 00.1154-.5781l-.8656-.8079c.0101-.0972.0202-.1954.0283-.2936l1.0073-.6236a.3442.3442 0 000-.5892zm-6.7413 8.3551a.7138.7138 0 01.2986-1.396.714.714 0 11-.2997 1.396zm-.3422-2.3142a.649.649 0 00-.7715.5l-.3573 1.6685c-1.1035.501-2.3285.7795-3.6193.7795a8.7368 8.7368 0 01-3.6951-.814l-.3574-1.6684a.648.648 0 00-.7714-.499l-1.473.3158a8.7216 8.7216 0 01-.7613-.898h7.1676c.081 0 .1356-.0141.1356-.088v-2.536c0-.074-.0536-.0881-.1356-.0881h-2.0966v-1.6077h2.2677c.2065 0 1.1065.0587 1.394 1.2088.0901.3533.2875 1.5044.4232 1.8729.1346.413.6833 1.2381 1.2685 1.2381h3.5716a.7492.7492 0 00.1296-.0131 8.7874 8.7874 0 01-.8119.9526zM6.8369 20.024a.714.714 0 11-.2997-1.396.714.714 0 01.2997 1.396zM4.1177 8.9972a.7137.7137 0 11-1.304.5791.7137.7137 0 011.304-.579zm-.8352 1.9813l1.5347-.6824a.65.65 0 00.33-.8585l-.3158-.7147h1.2432v5.6025H3.5669a8.7753 8.7753 0 01-.2834-3.348zm6.7343-.5437V8.7836h2.9601c.153 0 1.0792.1772 1.0792.8697 0 .575-.7107.7815-1.2948.7815zm10.7574 1.4862c0 .2187-.008.4363-.0243.651h-.9c-.09 0-.1265.0586-.1265.1477v.413c0 .973-.5487 1.1846-1.0296 1.2382-.4576.0517-.9648-.1913-1.0275-.4717-.2704-1.5186-.7198-1.8436-1.4305-2.4034.8817-.5599 1.799-1.386 1.799-2.4915 0-1.1936-.819-1.9458-1.3769-2.3153-.7825-.5163-1.6491-.6195-1.883-.6195H5.4682a8.7651 8.7651 0 014.907-2.7699l1.0974 1.151a.648.648 0 00.9182.0213l1.227-1.1743a8.7753 8.7753 0 016.0044 4.2762l-.8403 1.8982a.652.652 0 00.33.8585l1.6178.7188c.0283.2875.0425.577.0425.8717zm-9.3006-9.5993a.7128.7128 0 11.984 1.0316.7137.7137 0 01-.984-1.0316zm8.3389 6.71a.7107.7107 0 01.9395-.3625.7137.7137 0 11-.9405.3635z"
+          ></path></svg
+        >
+        <svg
+          class="size-8 fill-current transition hover:scale-120"
+          role="img"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          ><title>Python</title><path
+            d="M14.25.18l.9.2.73.26.59.3.45.32.34.34.25.34.16.33.1.3.04.26.02.2-.01.13V8.5l-.05.63-.13.55-.21.46-.26.38-.3.31-.33.25-.35.19-.35.14-.33.1-.3.07-.26.04-.21.02H8.77l-.69.05-.59.14-.5.22-.41.27-.33.32-.27.35-.2.36-.15.37-.1.35-.07.32-.04.27-.02.21v3.06H3.17l-.21-.03-.28-.07-.32-.12-.35-.18-.36-.26-.36-.36-.35-.46-.32-.59-.28-.73-.21-.88-.14-1.05-.05-1.23.06-1.22.16-1.04.24-.87.32-.71.36-.57.4-.44.42-.33.42-.24.4-.16.36-.1.32-.05.24-.01h.16l.06.01h8.16v-.83H6.18l-.01-2.75-.02-.37.05-.34.11-.31.17-.28.25-.26.31-.23.38-.2.44-.18.51-.15.58-.12.64-.1.71-.06.77-.04.84-.02 1.27.05zm-6.3 1.98l-.23.33-.08.41.08.41.23.34.33.22.41.09.41-.09.33-.22.23-.34.08-.41-.08-.41-.23-.33-.33-.22-.41-.09-.41.09zm13.09 3.95l.28.06.32.12.35.18.36.27.36.35.35.47.32.59.28.73.21.88.14 1.04.05 1.23-.06 1.23-.16 1.04-.24.86-.32.71-.36.57-.4.45-.42.33-.42.24-.4.16-.36.09-.32.05-.24.02-.16-.01h-8.22v.82h5.84l.01 2.76.02.36-.05.34-.11.31-.17.29-.25.25-.31.24-.38.2-.44.17-.51.15-.58.13-.64.09-.71.07-.77.04-.84.01-1.27-.04-1.07-.14-.9-.2-.73-.25-.59-.3-.45-.33-.34-.34-.25-.34-.16-.33-.1-.3-.04-.25-.02-.2.01-.13v-5.34l.05-.64.13-.54.21-.46.26-.38.3-.32.33-.24.35-.2.35-.14.33-.1.3-.06.26-.04.21-.02.13-.01h5.84l.69-.05.59-.14.5-.21.41-.28.33-.32.27-.35.2-.36.15-.36.1-.35.07-.32.04-.28.02-.21V6.07h2.09l.14.01zm-6.47 14.25l-.23.33-.08.41.08.41.23.33.33.23.41.08.41-.08.33-.23.23-.33.08-.41-.08-.41-.23-.33-.33-.23-.41-.08-.41.08z"
+          ></path></svg
+        >
+        <svg
+          class="size-8 fill-current transition hover:scale-120"
+          role="img"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          ><title>Node.js</title><path
+            d="M11.998,24c-0.321,0-0.641-0.084-0.922-0.247l-2.936-1.737c-0.438-0.245-0.224-0.332-0.08-0.383 c0.585-0.203,0.703-0.25,1.328-0.604c0.065-0.037,0.151-0.023,0.218,0.017l2.256,1.339c0.082,0.045,0.197,0.045,0.272,0l8.795-5.076 c0.082-0.047,0.134-0.141,0.134-0.238V6.921c0-0.099-0.053-0.192-0.137-0.242l-8.791-5.072c-0.081-0.047-0.189-0.047-0.271,0 L3.075,6.68C2.99,6.729,2.936,6.825,2.936,6.921v10.15c0,0.097,0.054,0.189,0.139,0.235l2.409,1.392 c1.307,0.654,2.108-0.116,2.108-0.89V7.787c0-0.142,0.114-0.253,0.256-0.253h1.115c0.139,0,0.255,0.112,0.255,0.253v10.021 c0,1.745-0.95,2.745-2.604,2.745c-0.508,0-0.909,0-2.026-0.551L2.28,18.675c-0.57-0.329-0.922-0.945-0.922-1.604V6.921 c0-0.659,0.353-1.275,0.922-1.603l8.795-5.082c0.557-0.315,1.296-0.315,1.848,0l8.794,5.082c0.57,0.329,0.924,0.944,0.924,1.603 v10.15c0,0.659-0.354,1.273-0.924,1.604l-8.794,5.078C12.643,23.916,12.324,24,11.998,24z M19.099,13.993 c0-1.9-1.284-2.406-3.987-2.763c-2.731-0.361-3.009-0.548-3.009-1.187c0-0.528,0.235-1.233,2.258-1.233 c1.807,0,2.473,0.389,2.747,1.607c0.024,0.115,0.129,0.199,0.247,0.199h1.141c0.071,0,0.138-0.031,0.186-0.081 c0.048-0.054,0.074-0.123,0.067-0.196c-0.177-2.098-1.571-3.076-4.388-3.076c-2.508,0-4.004,1.058-4.004,2.833 c0,1.925,1.488,2.457,3.895,2.695c2.88,0.282,3.103,0.703,3.103,1.269c0,0.983-0.789,1.402-2.642,1.402 c-2.327,0-2.839-0.584-3.011-1.742c-0.02-0.124-0.126-0.215-0.253-0.215h-1.137c-0.141,0-0.254,0.112-0.254,0.253 c0,1.482,0.806,3.248,4.655,3.248C17.501,17.007,19.099,15.91,19.099,13.993z"
+          ></path></svg
+        >
+        <svg
+          class="size-8 fill-current transition hover:scale-120"
+          role="img"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          ><title>WebAssembly</title><path
+            d="M14.745,0c0,0.042,0,0.085,0,0.129c0,1.52-1.232,2.752-2.752,2.752c-1.52,0-2.752-1.232-2.752-2.752 c0-0.045,0-0.087,0-0.129H0v24h24V0H14.745z M11.454,21.431l-1.169-5.783h-0.02l-1.264,5.783H7.39l-1.824-8.497h1.59l1.088,5.783 h0.02l1.311-5.783h1.487l1.177,5.854h0.02l1.242-5.854h1.561l-2.027,8.497H11.454z M20.209,21.431l-0.542-1.891h-2.861l-0.417,1.891 h-1.59l2.056-8.497h2.509l2.5,8.497H20.209z M17.812,15.028l-0.694,3.118h2.159l-0.796-3.118H17.812z"
+          ></path></svg
+        >
+        <svg
+          class="size-8 fill-current transition hover:scale-120"
+          role="img"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          ><title>.NET</title><path
+            d="M24 8.77h-2.468v7.565h-1.425V8.77h-2.462V7.53H24zm-6.852 7.565h-4.821V7.53h4.63v1.24h-3.205v2.494h2.953v1.234h-2.953v2.604h3.396zm-6.708 0H8.882L4.78 9.863a2.896 2.896 0 0 1-.258-.51h-.036c.032.189.048.592.048 1.21v5.772H3.157V7.53h1.659l3.965 6.32c.167.261.275.442.323.54h.024c-.04-.233-.06-.629-.06-1.185V7.529h1.372zm-8.703-.693a.868.829 0 0 1-.869.829.868.829 0 0 1-.868-.83.868.829 0 0 1 .868-.828.868.829 0 0 1 .869.829Z"
+          ></path></svg
+        >
+      </div>
+    </section>
+    <section
+      class="flex h-screen w-full shrink-0 flex-col items-center justify-center bg-linear-120 from-orange-950 from-20% via-orange-900 via-85% to-amber-700"
+      id="slide-2"
+      x-intersect.full="slide = 2"
+      aria-label="Sandhole"
+    >
+      <div class="flex flex-col items-center justify-center">
+        <div class="relative mb-4 flex">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="size-8 self-start"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-server-icon lucide-server"
+            aria-hidden="true"
+            ><rect width="20" height="8" x="2" y="2" rx="2" ry="2"></rect><rect
+              width="20"
+              height="8"
+              x="2"
+              y="14"
+              rx="2"
+              ry="2"></rect><line x1="6" x2="6.01" y1="6" y2="6"></line><line x1="6" x2="6.01" y1="18" y2="18"
+            ></line></svg
+          >
+          <div class="sandhole-connection h-60 w-48" aria-hidden="true"></div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="size-8 self-end"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-earth-icon lucide-earth"
+            aria-hidden="true"
+            ><path d="M21.54 15H17a2 2 0 0 0-2 2v4.54"></path><path
+              d="M7 3.34V5a3 3 0 0 0 3 3a2 2 0 0 1 2 2c0 1.1.9 2 2 2a2 2 0 0 0 2-2c0-1.1.9-2 2-2h3.17"></path><path
+              d="M11 21.95V18a2 2 0 0 0-2-2a2 2 0 0 1-2-2v-1a2 2 0 0 0-2-2H2.05"></path><circle cx="12" cy="12" r="10"
+            ></circle></svg
+          >
+          <Image
+            width={imageWidth * 1.25}
+            loading="eager"
+            src={logoSandhole}
+            alt="Sandhole"
+            class="absolute top-17 left-0 scale-85 transition hover:scale-100"
+          />
+        </div>
+        <p
+          x-text="lang == 'pt' ? 'Um proxy reverso escrito em Rust e baseado em SSH.' : 'An SSH-based reverse proxy built in Rust.'"
+        >
+          An SSH-based reverse proxy built in Rust.
+        </p>
+        <p x-text="lang == 'pt' ? 'Sem mais problemas de NAT!' : 'No extra software required to beat NAT!'">
+          No extra software required to beat NAT!
+        </p>
+        <a
+          class="mt-2 underline decoration-dashed transition-colors hover:text-pink-500 focus:text-pink-500"
+          href="https://sandhole.com.br"
+          target="_blank">https://sandhole.com.br</a
+        >
+      </div>
+    </section>
     <button
       type="button"
-      @click="slide > 0 && slide--"
-      @keydown.left.window="slide > 0 && slide--"
-      @keydown.h.window="slide > 0 && slide--"
+      @click="prev"
+      @keydown.left.window.prevent="prev"
+      @keydown.h.window="prev"
       class="fixed inset-y-0 left-0 z-10 px-2 text-gray-100/40 transition hover:bg-gray-500/20 hover:text-gray-100 focus:bg-gray-500/20 focus:text-gray-100"
       :class="slide > 0 ? 'opacity-100' : 'opacity-0'"
-      :disabled="slide === 0"
+      :disabled="slide <= 0"
+      tabindex="1"
+      aria-label="Previous"
     >
       <svg
         class="size-8"
@@ -107,12 +253,14 @@ const maxSlide = 1;
     </button>
     <button
       type="button"
-      @click="slide < maxSlide && slide++"
-      @keydown.right.window="slide < maxSlide && slide++"
-      @keydown.l.window="slide < maxSlide && slide++"
+      @click="next"
+      @keydown.right.window.prevent="next"
+      @keydown.l.window="next"
       class="fixed inset-y-0 right-0 z-10 px-2 text-gray-100/40 transition hover:bg-gray-500/20 hover:text-gray-100 focus:bg-gray-500/20 focus:text-gray-100"
       :class="slide < maxSlide ? 'opacity-100' : 'opacity-0'"
-      :disabled="slide === maxSlide"
+      :disabled="slide >= maxSlide"
+      tabindex="2"
+      aria-label="Next"
     >
       <svg
         class="size-8"
