--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -11,3 +11,25 @@
 @theme {
   --font-sans: "DejaVu Sans", sans-serif;
 }
+
+.sandhole-connection {
+  background-image: repeating-linear-gradient(-45deg, transparent, transparent 0.25rem, #eee 0.375rem, #eee 0.5rem);
+  clip-path: polygon(
+    0rem 0.75rem,
+    6.25rem 0.75rem,
+    6.25rem 13.75rem,
+    12rem 13.75rem,
+    12rem 14.25rem,
+    5.75rem 14.25rem,
+    5.75rem 1.25rem,
+    0rem 1.25rem
+  );
+  background-size: 200% 200%;
+  animation: moving-stripes 10s linear infinite reverse;
+}
+
+@keyframes moving-stripes {
+  100% {
+    background-position: 100% 100%;
+  }
+}
