--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -29,7 +29,7 @@ const { title } = Astro.props;
     <link rel="manifest" href="/manifest.json" />
     <meta name="msapplication-TileColor" content="#1f2937" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#1f2937" data-react-helmet="true" />
+    <meta name="theme-color" content="#ff8904" data-react-helmet="true" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <meta property="og:title" content={title} />
