Fix accidental deadzones

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -260,7 +260,7 @@ const maxSlide = 3;
       @keydown.left.window.prevent="prev"
       @keydown.h.window="prev"
       class="fixed inset-y-0 left-0 z-10 px-2 text-gray-100/40 transition hover:bg-gray-500/20 hover:text-gray-100 focus:bg-gray-500/20 focus:text-gray-100"
-      :class="slide > 0 ? 'opacity-100' : 'opacity-0'"
+      :class="slide > 0 ? 'opacity-100 pointer-events-auto' : 'opacity-0 pointer-events-none'"
       :disabled="slide <= 0"
       tabindex="1"
       :aria-label="lang === 'pt' ? 'Anterior' : 'Previous'"
@@ -285,7 +285,7 @@ const maxSlide = 3;
       @keydown.right.window.prevent="next"
       @keydown.l.window="next"
       class="fixed inset-y-0 right-0 z-10 px-2 text-gray-100/40 transition hover:bg-gray-500/20 hover:text-gray-100 focus:bg-gray-500/20 focus:text-gray-100"
-      :class="slide < maxSlide ? 'opacity-100' : 'opacity-0'"
+      :class="slide < maxSlide ? 'opacity-100 pointer-events-auto' : 'opacity-0 pointer-events-none'"
       :disabled="slide >= maxSlide"
       tabindex="2"
       :aria-label="lang === 'pt' ? 'Próximo' : 'Next'"
