Better intersect and a few adjustments

--- a/src/components/duper_example.astro
+++ b/src/components/duper_example.astro
@@ -1,7 +1,8 @@
-<div x-show="lang === 'en'" class="text-left text-xs sm:text-base"><pre class="text-[#e1e4e8] bg-[#14191e] w-max p-4 rounded-lg inset-shadow-xs inset-shadow-white/20" dir="ltr"><code><span class="line"><span class="text-[#B392F0]">Project</span><span>({</span></span>
+<div x-show="lang === 'en'" class="text-left text-xs sm:text-sm"><pre class="text-[#e1e4e8] bg-slate-900/90 w-max p-4 rounded-lg inset-shadow-xs inset-shadow-white/20" dir="ltr"><code><span class="line"><span class="text-[#B392F0]">Project</span><span>({</span></span>
 <span class="line"><span class="text-[#FFAB70]">  name</span><span>: </span><h2 class="text-[#9ECBFF] inline">"Duper"</h2><span>,</span></span>
 <span class="line"><span class="text-[#FFAB70]">  description</span>: <span class="text-[#9ECBFF]">"The format that's super!"</span><span>,</span></span>
 <span class="line"><span class="text-[#FFAB70]">  start</span><span>: </span><span class="text-[#B392F0]">PlainYearMonth</span><span>(</span><span class="text-[#79B8FF]">'2025-10'</span><span>),</span></span>
+<span class="line"><span class="text-[#FFAB70]">  end</span><span>: </span><span class="text-[#F97583]">null</span><span>,</span></span>
 <span class="line"><span class="text-[#FFAB70]">  features</span><span>: [</span></span>
 <span class="line"><span class="text-[#9ECBFF]">    "JSON-compatible"</span><span>,</span></span>
 <span class="line"><span class="text-[#9ECBFF]">    "Comments"</span><span>,</span></span>
@@ -9,12 +10,13 @@
 <span class="line"><span class="text-[#9ECBFF]">    "Identifiers"</span><span>,</span></span>
 <span class="line"><span class="text-[#6A737D]">    // And more!</span></span>
 <span class="line"><span>  ],</span></span>
-<span class="line"><span class="text-[#FFAB70]">  link</span><span>: </span><span class="text-[#B392F0]">URL</span><span>(</span><a href="https://duper.dev.br" target="_blank" class="text-[#9ECBFF] underline decoration-dashed hover:text-orange-400 focus:text-orange-400 transition-colors">"https://duper.dev.br"</a><span>),</span></span>
+<span class="line"><span class="text-[#FFAB70]">  link</span><span>: </span><span class="text-[#B392F0]">URL</span><span>(</span><a href="https://duper.dev.br" target="_blank" class="text-[#9ECBFF] underline  hover:text-orange-400 focus:text-orange-400 transition-colors">"https://duper.dev.br"</a><span>),</span></span>
 <span class="line"><span>})</span></span></code></pre></div>
-<template x-if="lang === 'pt'"><div class="text-left text-xs sm:text-base"><pre class="text-[#e1e4e8] bg-[#14191e] w-max p-4 rounded-lg inset-shadow-xs inset-shadow-white/20" dir="ltr"><code><span class="line"><span class="text-[#B392F0]">Projeto</span><span>({</span></span>
+<template x-if="lang === 'pt'"><div class="text-left text-xs sm:text-sm"><pre class="text-[#e1e4e8] bg-slate-900/90 w-max p-4 rounded-lg inset-shadow-xs inset-shadow-white/20" dir="ltr"><code><span class="line"><span class="text-[#B392F0]">Projeto</span><span>({</span></span>
 <span class="line"><span class="text-[#FFAB70]">  nome</span><span>: </span><h2 class="text-[#9ECBFF] inline">"Duper"</h2><span>,</span></span>
 <span class="line"><span class="text-[#FFAB70]">  "descrição"</span>: <span class="text-[#9ECBFF]">"O formato que é super!"</span><span>,</span></span>
 <span class="line"><span class="text-[#FFAB70]">  "início"</span><span>: </span><span class="text-[#B392F0]">PlainYearMonth</span><span>(</span><span class="text-[#79B8FF]">'2025-10'</span><span>),</span></span>
+<span class="line"><span class="text-[#FFAB70]">  fim</span><span>: </span><span class="text-[#F97583]">null</span><span>,</span></span>
 <span class="line"><span class="text-[#FFAB70]">  funcionalidades</span><span>: [</span></span>
 <span class="line"><span class="text-[#9ECBFF]">    "Compatível com JSON"</span><span>,</span></span>
 <span class="line"><span class="text-[#9ECBFF]">    "Comentários"</span><span>,</span></span>
@@ -22,5 +24,5 @@
 <span class="line"><span class="text-[#9ECBFF]">    "Identificadores"</span><span>,</span></span>
 <span class="line"><span class="text-[#6A737D]">    // E mais!</span></span>
 <span class="line"><span>  ],</span></span>
-<span class="line"><span class="text-[#FFAB70]">  link</span><span>: </span><span class="text-[#B392F0]">URL</span><span>(</span><a href="https://duper.dev.br" target="_blank" class="text-[#9ECBFF] underline decoration-dashed hover:text-orange-400 focus:text-orange-400 transition-colors">"https://duper.dev.br"</a><span>),</span></span>
+<span class="line"><span class="text-[#FFAB70]">  link</span><span>: </span><span class="text-[#B392F0]">URL</span><span>(</span><a href="https://duper.dev.br" target="_blank" class="text-[#9ECBFF] underline  hover:text-orange-400 focus:text-orange-400 transition-colors">"https://duper.dev.br"</a><span>),</span></span>
 <span class="line"><span>})</span></span></code></pre></div></template>
