--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -251,20 +251,30 @@ const maxSlide = 3;
       class="flex min-h-screen w-full shrink-0 flex-col items-center justify-center bg-pink-950 px-2"
       id="slide-3"
       x-intersect.margin.100px.-50%.0px.-50%="slide = 3"
-      :aria-label="lang === 'pt' ? 'Seu projeto' : 'Your project'"
+      :aria-label="lang === 'pt' ? 'Sua ideia' : 'Your idea'"
     >
+      <div
+        class="mb-6 h-20 w-sm max-w-9/12 rounded-xl border border-dashed border-pink-200 bg-black/10 inset-shadow-sm inset-shadow-black/50"
+        aria-hidden="true"
+      >
+      </div>
       <a
         href="mailto:eric@eric.dev.br"
         rel="me"
         class="block w-xl max-w-full rounded-xl border border-dashed border-pink-200 bg-black/10 px-2 py-16 underline inset-shadow-sm inset-shadow-black/50 transition hover:bg-black/5 hover:text-orange-400 hover:inset-shadow-xs focus:bg-black/5 focus:text-orange-400 focus:inset-shadow-xs"
       >
-        <h2 class="text-xl font-semibold" x-text="lang === 'pt' ? 'Seu projeto aqui!' : 'Your project here!'">
-          Your project here!
+        <h2 class="text-xl font-semibold" x-text="lang === 'pt' ? 'Sua ideia aqui!' : 'Your idea here!'">
+          Your idea here!
         </h2>
         <p class="mt-4">
           <span class="mt-2" x-text="lang === 'pt' ? 'Mande um e-mail' : 'Get in touch'">Get in touch</span>
         </p>
       </a>
+      <p class="mt-6" aria-hidden="true">
+        &copy;&nbsp;<span
+          class="rounded-xl border border-dashed border-pink-200 bg-black/10 px-12 inset-shadow-sm inset-shadow-black/50"
+        ></span>
+      </p>
     </section>
     <button
       type="button"
