--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/base.css";
 import "@fontsource/dejavu-sans";
+import "@fontsource/dejavu-mono";
 
 type Props = {
   title: string;
