--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,8 +60,9 @@ const maxSlide = 3;
         />
       </a>
       <h1 class="mt-6 mb-2 text-2xl font-semibold">Eric Rodrigues Pires</h1>
+      <p class="mt-2 mb-1 font-extralight text-gray-500" x-text="lang === 'pt' ? 'ele/dele' : 'he/him'">he/him</p>
       <p
-        class="mt-4 font-light text-gray-400"
+        class="font-light text-gray-400"
         x-text="lang === 'pt' ? 'Programando do Brasil.' : 'Programming from Brazil.'"
       >
         Programming from Brazil.
