Add link to blog

--- a/src/components/duper_example.astro
+++ b/src/components/duper_example.astro
@@ -10,7 +10,7 @@
 <span class="line"><span class="text-[#9ECBFF]">    "Identifiers"</span><span>,</span></span>
 <span class="line"><span class="text-[#6A737D]">    // And more!</span></span>
 <span class="line"><span>  ],</span></span>
-<span class="line"><span class="text-[#FFAB70]">  link</span><span>: </span><span class="text-[#B392F0]">URL</span><span>(</span><a href="https://duper.dev.br" target="_blank" class="text-[#9ECBFF] underline  hover:text-orange-400 focus:text-orange-400 transition-colors">"https://duper.dev.br"</a><span>),</span></span>
+<span class="line"><span class="text-[#FFAB70]">  link</span><span>: </span><span class="text-[#B392F0]">URL</span><span>(</span><a href="https://duper.dev.br" target="_blank" class="text-[#9ECBFF] underline  hover:text-orange-400 hover:decoration-wavy focus:text-orange-400 focus:decoration-wavy transition-colors">"https://duper.dev.br"</a><span>),</span></span>
 <span class="line"><span>})</span></span></code></pre></div>
 <template x-if="lang === 'pt'"><div class="text-left text-xs sm:text-sm"><pre class="text-[#e1e4e8] bg-slate-900/90 w-max p-4 rounded-lg inset-shadow-xs inset-shadow-white/20" dir="ltr"><code><span class="line"><span class="text-[#B392F0]">Projeto</span><span>({</span></span>
 <span class="line"><span class="text-[#FFAB70]">  nome</span><span>: </span><span class="text-[#9ECBFF]">"Duper"</span><span>,</span></span>
@@ -24,5 +24,5 @@
 <span class="line"><span class="text-[#9ECBFF]">    "Identificadores"</span><span>,</span></span>
 <span class="line"><span class="text-[#6A737D]">    // E mais!</span></span>
 <span class="line"><span>  ],</span></span>
-<span class="line"><span class="text-[#FFAB70]">  link</span><span>: </span><span class="text-[#B392F0]">URL</span><span>(</span><a href="https://duper.dev.br" target="_blank" class="text-[#9ECBFF] underline  hover:text-orange-400 focus:text-orange-400 transition-colors">"https://duper.dev.br"</a><span>),</span></span>
+<span class="line"><span class="text-[#FFAB70]">  link</span><span>: </span><span class="text-[#B392F0]">URL</span><span>(</span><a href="https://duper.dev.br" target="_blank" class="text-[#9ECBFF] underline  hover:text-orange-400 hover:decoration-wavy focus:text-orange-400 focus:decoration-wavy transition-colors ">"https://duper.dev.br"</a><span>),</span></span>
 <span class="line"><span>})</span></span></code></pre></div></template>
