--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,10 +76,11 @@ const maxSlide = 3;
       <footer class="text-sm">
         © 2022&mdash;<span x-text="lang === 'pt' ? 'hoje' : 'today'">today</span>
       </footer>
-      <button
-        type="button"
-        class="mt-7 bg-gray-300 px-6 font-mono text-orange-900 italic ring-0 transition outline-none hover:scale-110 hover:bg-gray-50 focus:bg-gray-50 focus:ring-4 focus:ring-orange-400"
-        @click={`() => {
+      <div class="flex gap-x-2">
+        <button
+          type="button"
+          class="mt-7 bg-gray-300 px-6 font-mono text-orange-900 italic ring-0 transition outline-none hover:scale-110 hover:bg-gray-50 focus:bg-gray-50 focus:ring-4 focus:ring-orange-400"
+          @click={`() => {
           if (lang === 'pt') {
             lang = 'en';
           } else {
@@ -87,25 +88,51 @@ const maxSlide = 3;
           }
           localStorage['lang'] = lang;
         }`}
-        :aria-label="lang === 'pt' ? 'Mudar idioma' : 'Change language'"
-      >
-        <svg
-          class="inline size-5"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="lucide lucide-languages-icon lucide-languages"
-          ><path d="m5 8 6 6"></path><path d="m4 14 6-6 2-3"></path><path d="M2 5h12"></path><path d="M7 2h1"
-          ></path><path d="m22 22-5-10-5 10"></path><path d="M14 18h6"></path></svg
+          :aria-label="lang === 'pt' ? 'Mudar idioma' : 'Change language'"
         >
-        <span x-text="lang">en</span>
-      </button>
+          <svg
+            class="inline size-5"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-languages-icon lucide-languages"
+            aria-hidden="true"
+            ><path d="m5 8 6 6"></path><path d="m4 14 6-6 2-3"></path><path d="M2 5h12"></path><path d="M7 2h1"
+            ></path><path d="m22 22-5-10-5 10"></path><path d="M14 18h6"></path></svg
+          >
+          <span x-text="lang">en</span>
+        </button>
+        <a
+          class="mt-7 bg-gray-300 px-6 font-mono text-orange-900 italic ring-0 transition outline-none hover:scale-110 hover:bg-gray-50 focus:bg-gray-50 focus:ring-4 focus:ring-orange-400"
+          :href="lang === 'pt' ? 'https://blog.eric.dev.br/pt-BR' : 'https://blog.eric.dev.br'"
+          aria-label="Blog"
+        >
+          <svg
+            class="inline size-5"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-message-square-text-icon lucide-message-square-text"
+            aria-hidden="true"
+            ><path
+              d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
+            ></path><path d="M7 11h10"></path><path d="M7 15h6"></path><path d="M7 7h8"></path></svg
+          >
+          <span>Blog</span>
+        </a>
+      </div>
     </article>
     <article
       class="flex min-h-screen w-full shrink-0 flex-col items-center justify-center bg-gray-950"
@@ -240,7 +267,7 @@ const maxSlide = 3;
           No extra software required to beat NAT!
         </p>
         <a
-          class="mt-3 underline transition-colors hover:text-green-500 focus:text-green-500"
+          class="mt-3 underline transition-colors hover:text-green-500 hover:decoration-wavy focus:text-green-500 focus:decoration-wavy"
           href="https://sandhole.com.br"
           target="_blank">https://sandhole.com.br</a
         >
@@ -263,7 +290,7 @@ const maxSlide = 3;
       <a
         href="mailto:eric@eric.dev.br"
         rel="me"
-        class="block w-xl max-w-full rounded-xl border border-dashed border-pink-200 bg-black/10 px-2 py-16 underline inset-shadow-sm inset-shadow-black/50 transition hover:bg-black/5 hover:text-orange-400 hover:inset-shadow-xs focus:bg-black/5 focus:text-orange-400 focus:inset-shadow-xs"
+        class="block w-xl max-w-full rounded-xl border border-dashed border-pink-200 bg-black/10 px-2 py-16 underline inset-shadow-sm inset-shadow-black/50 transition hover:bg-black/5 hover:text-orange-400 hover:decoration-wavy hover:inset-shadow-xs focus:bg-black/5 focus:text-orange-400 focus:decoration-wavy focus:inset-shadow-xs"
       >
         <h2 class="text-xl font-semibold" x-text="lang === 'pt' ? 'Sua ideia aqui!' : 'Your idea here!'">
           Your idea here!
@@ -300,7 +327,8 @@ const maxSlide = 3;
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
-        class="lucide lucide-chevron-left-icon lucide-chevron-left"><path d="m15 18-6-6 6-6"></path></svg
+        class="lucide lucide-chevron-left-icon lucide-chevron-left"
+        aria-hidden="true"><path d="m15 18-6-6 6-6"></path></svg
       >
     </button>
     <button
@@ -325,7 +353,8 @@ const maxSlide = 3;
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
-        class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"></path></svg
+        class="lucide lucide-chevron-right-icon lucide-chevron-right"
+        aria-hidden="true"><path d="m9 18 6-6-6-6"></path></svg
       >
     </button>
   </div>
