--- a/src/components/DuperExample.astro
+++ b/src/components/DuperExample.astro
@@ -1,3 +1,9 @@
+<div
+  class="reveal delay-75"
+  x-data="{ active: false }"
+  :class="active && 'active'"
+  x-intersect="active = true"
+>
 <div x-show="lang === 'en'" class="text-left text-xs sm:text-sm"><pre class="text-[#e1e4e8] bg-slate-900/90 w-max p-4 rounded-lg inset-shadow-xs inset-shadow-white/20" dir="ltr"><code><span class="line"><span class="text-[#B392F0]">Project</span><span>({</span></span>
 <span class="line"><span class="text-[#FFAB70]">  name</span><span>: </span><span class="text-[#9ECBFF]">"Duper"</span><span>,</span></span>
 <span class="line"><span class="text-[#FFAB70]">  description</span>: <span class="text-[#9ECBFF]">"The format that's super!"</span><span>,</span></span>
@@ -26,3 +32,4 @@
 <span class="line"><span>  ],</span></span>
 <span class="line"><span class="text-[#FFAB70]">  link</span><span>: </span><span class="text-[#B392F0]">URL</span><span>(</span><a href="https://duper.dev.br" target="_blank" class="text-[#9ECBFF] underline  hover:text-orange-400 hover:decoration-wavy focus:text-orange-400 focus:decoration-wavy transition-colors ">"https://duper.dev.br"</a><span>),</span></span>
 <span class="line"><span>})</span></span></code></pre></div></template>
+</div>
