--- a/src/components/slides/SandholeSlide.astro
+++ b/src/components/slides/SandholeSlide.astro
@@ -14,7 +14,12 @@ const imageWidth = 224;
 >
   <h2 class="sr-only">Sandhole</h2>
   <div class="flex flex-col items-center justify-center">
-    <div class="relative mb-4 flex">
+    <div
+      class="reveal relative mb-4 flex"
+      x-data="{ active: false }"
+      :class="active && 'active'"
+      x-intersect="active = true"
+    >
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="size-8 self-start"
@@ -64,19 +69,41 @@ const imageWidth = 224;
       />
     </div>
     <p
+      class="reveal delay-75"
       x-text="lang === 'pt' ? 'Um proxy reverso escrito em Rust e baseado em SSH.' : 'An SSH-based reverse proxy built in Rust.'"
+      x-data="{ active: false }"
+      :class="active && 'active'"
+      x-intersect="active = true"
     >
       An SSH-based reverse proxy built in Rust.
     </p>
-    <p class="mt-1" x-text="lang === 'pt' ? 'Sem mais problemas de NAT!' : 'No extra software required to beat NAT!'">
+    <p
+      class="reveal mt-1 delay-150"
+      x-text="lang === 'pt' ? 'Sem mais problemas de NAT!' : 'No extra software required to beat NAT!'"
+      x-data="{ active: false }"
+      :class="active && 'active'"
+      x-intersect="active = true"
+    >
       No extra software required to beat NAT!
     </p>
-    <a
-      class="mt-3 underline transition-colors hover:text-green-500 hover:decoration-wavy focus:text-green-500 focus:decoration-wavy"
-      href="https://sandhole.com.br"
-      target="_blank">https://sandhole.com.br</a
+    <div
+      class="reveal mt-3 delay-225"
+      x-data="{ active: false }"
+      :class="active && 'active'"
+      x-intersect="active = true"
     >
-    <footer class="mt-6 text-sm text-orange-100/70">
+      <a
+        class="underline transition-colors hover:text-green-500 hover:decoration-wavy focus:text-green-500 focus:decoration-wavy"
+        href="https://sandhole.com.br"
+        target="_blank">https://sandhole.com.br</a
+      >
+    </div>
+    <footer
+      class="reveal mt-6 text-sm text-orange-100/70 delay-350"
+      x-data="{ active: false }"
+      :class="active && 'active'"
+      x-intersect="active = true"
+    >
       © 2024&mdash;<span x-text="lang === 'pt' ? 'hoje' : 'today'">today</span>
     </footer>
   </div>
